[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"


[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde={version="1", features = ["derive"]}
config="0.13"
uuid={version="1",features=["v4"]}
chrono="0.4.15"

[dev-dependencies]
reqwest="0.11"

[dependencies.sqlx]
version="0.6"
default-features = false
features =[
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "uuid",
    "migrate"
]